# algorithms

./: .gitignore  CHANGELOGS.md  Makefile  README.md  README.rst  pyproject.toml  requirements.txt
java/basic/: HelloWorld.java  Makefile
java/matrix/: SpiralMatrix.java
java/sorting_and_search/: HeapSort.java  Makefile  MergeSort.java
java/string_array/: KthLargest.java  Makefile  MedianOfTwoSortedArrays.java
patterns/bitwise-xor/: 01.find_missing_number.ipynb  02.find_two_single_numbers.ipynb  find_missing_number.ipynb
patterns/cyclic-sort/: 01.cyclic-sort.ipynb  Untitled.ipynb
patterns/fast-slow-pointers/: 01.linklist-cycles.ipynb  02.find-scycle-start.ipynb
patterns/k-way-merge/: merge-k-sorted-lists.ipynb
patterns/sliding-window/: 01.find_maximum_in_sliding_window.ipynb  02.longest_substring_without_repeating_characters.ipynb  find_maximum_in_sliding_window.ipynb
patterns/subsets/: 01.permutations-distinct-integers.ipynb  02.permutations-with-duplicates.ipynb  permutations.ipynb
patterns/top-k-elements/: top-k-frequent-numbers.ipynb
patterns/topological-sort/: topological_sort.ipynb
patterns/tree-bfs/: symmetric_tree.ipynb
patterns/tree-dfs/: flood_fill.py
patterns/trees/: 01.symmetric_tree.ipynb  02.invert_tree.ipynb  03.flood_fille.ipynb  04.max_path_sum.ipynb  04.odd_network.ipynb
python/matrix/: spiral_matrix.py
python/sorting_and_search/: binary_search.py  (+2 more)
python3/: template.py
string_array/: eval_reverse_polish_notation.py  palindromic_partitions.py  reverse_without_affecting_special_chars.py  rotate_array.py  word_reverse.py
(+236 files in other folders)
